# kiva-ayiti

./: Ayiti.parq  AyitiEDA.ipynb  EkstraksyonDone.ipynb  LICENSE  LarsonC.csv  LarsonEDA.ipynb  Makefile  README.md  UnibankEDA.ipynb  acme PF-Dec2021-Part-Sent.xlsx  acmeEDA.ipynb  pyproject.toml  requirements.txt  unibank.parq
