[tool.poetry]
name = "kiva-ayiti"
version = "0.1.0"
description = "Eksplorasyon done Kiva sou Ayiti"
authors = ["J. Tipan Verella <tverella@tunein.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.3.2"
pandas = "^1.4.1"
seaborn = "^0.11.2"
pyarrow = "^7.0.0"
statsmodels = "^0.13.2"
scikit-learn = "^1.0.2"
networkx = "^2.7.1"
openpyxl = "^3.0.9"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
